<resources>
    <string name="app_name">Folded Flight</string>
    <string name="play_button">PLAY</string>
    <string name="high_scores_button">HIGH SCORES</string>
    <string name="exit_button">EXIT</string>
    <string name="select_difficulty_text">Select Difficulty</string>
    <string name="select_map_text">Select Map</string>
    <string name="select_plane_text">Select Plane Color</string>
    <string name="start_game_button">START GAME</string>
    <string name="back_button">BACK</string>
    <string name="start_timer">TIME: 00:00</string>
    <string name="paused_text">PAUSED</string>
    <string name="pause_text">Pause</string>
    <string name="resume_text">RESUME</string>
    <string name="main_menu_text">MAIN MENU</string>
    <string name="restart_text">RESTART</string>
    <string name="high_score_text">High Scores</string>
    <string name="high_score_one">1.) </string>
    <string name="high_score_two">2.) </string>
    <string name="high_score_three">3.) </string>
    <string name="high_score_four">4.) </string>
    <string name="high_score_five">5.) </string>
    <string name="move_up_text">Move Up</string>
    <string name="move_down_text">Move Down</string>
    <string name="most_coins_text">Most Coins Collected: 0</string>
</resources>