<?xml version="1.0" encoding="utf-8"?>

<!--
 - High Score View
 - Adapted from Helena Gonzales
 - Created: 11/20/2025
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/highScoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score_text"
            android:fontFamily="@font/pixelboy"
            android:textSize="54sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/highScore1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score_one"
            android:fontFamily="@font/pixelboy"
            android:paddingTop="16dp"
            android:textSize="32sp" />
        <TextView
            android:id="@+id/highScore2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score_two"
            android:fontFamily="@font/pixelboy"
            android:paddingTop="16dp"
            android:textSize="32sp" />
        <TextView
            android:id="@+id/highScore3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score_three"
            android:fontFamily="@font/pixelboy"
            android:paddingTop="16dp"
            android:textSize="32sp" />
        <TextView
            android:id="@+id/highScore4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score_four"
            android:fontFamily="@font/pixelboy"
            android:paddingTop="16dp"
            android:textSize="32sp" />
        <TextView
            android:id="@+id/highScore5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score_five"
            android:fontFamily="@font/pixelboy"
            android:paddingTop="16dp"
            android:textSize="32sp" />
        <TextView
            android:id="@+id/mostCoinsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_coins_text"
            android:fontFamily="@font/pixelboy"
            android:paddingTop="32dp"
            android:textSize="48sp"
            android:textColor="#FFD700" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:src="@drawable/crown_picsart_backgroundremover"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="-80dp"
                android:src="@drawable/red_plane" />

        </LinearLayout>

        <com.oddghosts.foldedflight.ui.PixelButton
            android:id="@+id/backButton"
            android:layout_width="150dp"
            android:layout_height="52dp"
            android:text="@string/back_button" />
    </LinearLayout>

</LinearLayout>