<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp"
    android:baselineAligned="false"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="0dp">

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/filepile"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="8"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="42sp"
            android:textStyle="bold" />

        <com.oddghosts.foldedflight.ui.PixelButton
            android:id="@+id/playButton"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:text="@string/play_button" />

        <com.oddghosts.foldedflight.ui.PixelButton
            android:id="@+id/highScoresButton"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:text="@string/high_scores_button" />

        <com.oddghosts.foldedflight.ui.PixelButton
            android:id="@+id/exitButton"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:text="@string/exit_button" />

    </LinearLayout>

</LinearLayout>