<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp"
    android:baselineAligned="false"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingEnd="16dp">

        <!-- Map Selection -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/pixelboy"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="6"
            android:text="@string/select_map_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.oddghosts.foldedflight.ui.PixelCard
                android:id="@+id/cityCard"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="6dp"
                android:layout_weight="1" />

            <com.oddghosts.foldedflight.ui.PixelCard
                android:id="@+id/forestCard"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="6dp"
                android:layout_weight="1" />

        </LinearLayout>

        <!-- Plane Color Selection -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/pixelboy"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="6"
            android:text="@string/select_plane_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.oddghosts.foldedflight.ui.PixelCard
                android:id="@+id/planeWhite"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1" />

            <com.oddghosts.foldedflight.ui.PixelCard
                android:id="@+id/planeRed"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1" />

            <com.oddghosts.foldedflight.ui.PixelCard
                android:id="@+id/planeBlue"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1" />

            <com.oddghosts.foldedflight.ui.PixelCard
                android:id="@+id/planeYellow"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingEnd="16dp">

        <!-- Difficulty Selection -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/pixelboy"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="6"
                android:text="@string/select_difficulty_text"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.oddghosts.foldedflight.ui.PixelCard
                    android:id="@+id/difficultyNormal"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1" />

                <com.oddghosts.foldedflight.ui.PixelCard
                    android:id="@+id/difficultyHard"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

        <com.oddghosts.foldedflight.ui.PixelButton
            android:id="@+id/startGameButton"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/start_game_button"
            android:layout_marginBottom="24dp"/>

        <com.oddghosts.foldedflight.ui.PixelButton
            android:id="@+id/backButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/back_button"/>

    </LinearLayout>

</LinearLayout>